add redis deployment

--- a/.gitlab/review.yaml
+++ b/.gitlab/review.yaml
@@ -20,3 +20,8 @@ env:
   REDIS_CACHE_LOCK_CONNECTION: default
   REDIS_SESSION_CONNECTION: default
   SESSION_CONNECTION: default
+
+redis-sentinel:
+  redis:
+    persistence:
+      enabled: false
