--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -24,6 +24,6 @@ version: 0.1.0
 appVersion: "1.16.0"
 
 dependencies:
-  - name: redis
-    repository: https://charts.bitnami.com/bitnami
-    version: 21.2.12
+  - name: redis-sentinel
+    repository: https://gitlab.metager.de/api/v4/projects/130/packages/helm/production
+    version: 0.1.5
