update redis-sentinel replicaCount in development, production, and review configurations

--- a/.gitlab/production.yaml
+++ b/.gitlab/production.yaml
@@ -90,3 +90,9 @@ resources:
     reverb:
       cpu: 50m
       memory: 50M
+
+redis-sentinel:
+  replicaCount: 3
+  redis:
+    persistence:
+      enabled: false
