--- a/metager/composer.json
+++ b/metager/composer.json
@@ -13,32 +13,34 @@
         "endroid/qr-code": "^5.0",
         "foroco/php-browser-detection": "^2.8",
         "globalcitizen/php-iban": "^4.2.3",
-        "invoiceninja/sdk-php": "^1.1",
+        "invoiceninja/sdk-php": "^1.4",
         "jenssegers/agent": "^2.6.4",
-        "laravel/framework": "^11.0",
-        "laravel/reverb": "^1.0",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9",
+        "laravel/framework": "^12.0",
+        "laravel/reverb": "^1.6",
+        "laravel/sanctum": "^4.2",
+        "laravel/tinker": "^2.10",
         "matomo/device-detector": "^6.3",
-        "mcamara/laravel-localization": "2.0.1",
+        "mcamara/laravel-localization": "2.3.0",
         "mews/captcha": "^3.3.3",
-        "mlocati/ip-lib": "^1.18",
-        "predis/predis": "^2.3",
-        "promphp/prometheus_client_php": "^2.10",
-        "smhg/sepa-qr-data": "^2.0",
+        "mlocati/ip-lib": "^1.22",
+        "nesbot/carbon": "^3.0",
+        "predis/predis": "^3.2",
+        "promphp/prometheus_client_php": "^2.14",
+        "smhg/sepa-qr-data": "^3.0",
         "vizir/laravel-keycloak-web-guard": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "barryvdh/laravel-ide-helper": "^3.0",
-        "laravel/dusk": "^8.0",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
+        "barryvdh/laravel-ide-helper": "^3.6",
+        "laravel/dusk": "^8.3",
+        "laravel/pint": "^1.25",
+        "laravel/sail": "^1.46",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1",
-        "php-webdriver/webdriver": "^1.15.1",
-        "spatie/laravel-ignition": "^2.4"
+        "phpunit/phpunit": "^12.3",
+        "php-webdriver/webdriver": "^1.15.2",
+        "spatie/laravel-ignition": "^2.9",
+        "pestphp/pest": "^4.1"
     },
     "autoload": {
         "psr-4": {
